Wed Feb 25 15:15:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* node.h (rb_thread_raised_clear): should not clear flags other than
	  raised flags.  a patch by Tomoyuki Chikanaga <chikanag AT
	  nippon-control-system.co.jp> at [ruby-dev:37794].  [ruby-dev:37776]

Wed Feb 25 15:05:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/extconf.rb (gai_strerror): checks if available and if
	  returns const pointer.

	* ext/socket/getaddrinfo.c (gai_strerror): defines only if non
	  available.  [ruby-core:21328]

Wed Feb 25 14:57:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (open_dir_handle): extracted from rb_w32_opendir.

	* win32/win32.c (winnt_stat): gets rid of strange behavior of
	  GetFileAttributes().  [ruby-core:21269]

Tue Feb 24 02:44:39 2009  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/erb.rb (PercentScanner): remove PercentScanner. fixed % after
	  %> bug. [ruby-dev:37751] [Bug #997] 

	* test/erb/test_erb.rb: ditto

Tue Feb 24 02:35:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_s_create): set nil as the value if assoc length
	  is not enough.  [ruby-core:21249]

Sun Feb 22 22:08:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (stack_extend): streamlined rb_thread_restore_context()
	  to ensure O(1) time.  based on a patch by Brent Roman <brent AT
	  mbari.org>.

Sun Feb 22 22:03:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (cc_mark): frees the continuation's stack if its thread
	  is dead to avoid recursive gc that segfaults.  [ruby-core:13889]
	  a patch by Brent Roman <brent AT mbari.org>.

	* eval.c (rb_cont_check): checks for valid continuation instance.

	* eval.c (rb_callcc): assigns th->thread before scope_dup() to
	  avoid segfaults if this scope_dup() triggers a gc pass.
	  a patch by Brent Roman <brent AT mbari.org>.

Sun Feb 22 21:43:34 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (ruby_float_step): extracted from num_step().
